--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <i class="fas fa-book-open text-8xl absolute -left-10 -top-10 text-white"></i>
             </div>
             <h2 class="text-3xl font-extrabold text-white relative z-10 tracking-wide drop-shadow-md">Jurnal Mengajar Guru</h2>
-            <p class="text-blue-100 text-base mt-2 relative z-10 font-medium">SMP Negeri 4 Majenang</p>
+            <p class="text-blue-100 text-base mt-2 relative z-10 font-medium">SMP Negeri 4 Majenang - Wartam</p>
         </div>
 
         <!-- Initial Loader Overlay -->
